--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "bootstrap": "^5.3.2",
     "cdbreact": "^1.5.18",
     "mdbreact": "^5.2.0",
+    "primereact": "^10.4.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.0",
     "react-dom": "^18.2.0",
