--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
     "axios": "^1.6.7",
     "bootstrap": "^5.3.2",
     "cdbreact": "^1.5.18",
+    "jwt-decode": "^4.0.0",
     "mdbreact": "^5.2.0",
     "primereact": "^10.4.0",
     "react": "^18.2.0",
